tidying up nb 2 and config par names

--- a/notebooks/2-Neighborhoods-PCA.ipynb
+++ b/notebooks/2-Neighborhoods-PCA.ipynb
@@ -32,7 +32,8 @@
     "from sklearn.neighbors import KernelDensity\n",
     "\n",
     "from joaquin.data import JoaquinData\n",
-    "from joaquin.config import all_phot_names, dr, root_cache_path, target_neighborhood_size\n",
+    "from joaquin.config import (all_phot_names, dr, root_cache_path, \n",
+    "                            neighborhood_size, testing_zone_size)\n",
     "from joaquin.plot import simple_corner, phot_to_label, plot_hr_cmd\n",
     "from joaquin.neighborhoods import get_neighborhood_X"
    ]
@@ -43,6 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cache_path = pathlib.Path(f'../cache/{dr}').resolve()\n",
+    "cache_path.mkdir(exist_ok=True, parents=True)\n",
+    "\n",
     "plot_path = pathlib.Path('../plot') / dr\n",
     "plot_path = plot_path.resolve()\n",
     "plot_path.mkdir(parents=True, exist_ok=True)"
@@ -386,7 +390,7 @@
    "source": [
     "sort_idx = dens.argsort()[::-1]\n",
     "\n",
-    "this_size = int(target_neighborhood_size * len(neighborhood_node_stars) / len(parent))\n",
+    "this_size = int(neighborhood_size * len(neighborhood_node_stars) / len(parent))\n",
     "\n",
     "neighborhoods = []\n",
     "for (i1, i2) in idxs[sort_idx]:\n",
@@ -498,7 +502,7 @@
     "zone_idx = []\n",
     "for i, nidx in enumerate(tqdm(neighborhoods)):\n",
     "    dist, idx = parent_tree.query(node_projected_X[nidx[0]],\n",
-    "                                  k=target_neighborhood_size)\n",
+    "                                  k=neighborhood_size)\n",
     "    zone_idx.append(idx[dist.argsort()])"
    ]
   },
@@ -515,6 +519,60 @@
     "    fig.tight_layout()\n",
     "    fig.savefig(neighbor_plot_path / f'parent-neighborhood-{n:03d}.png', dpi=200)\n",
     "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What fraction of the parent sample stars end up in a zone 1 vs zone 2?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_indices = []\n",
+    "for n in range(len(zone_idx)):\n",
+    "    all_indices.append(zone_idx[n][:testing_zone_size])\n",
+    "tmp = np.unique(np.ravel(all_indices)).shape[0] / parent_projected_X.shape[0]\n",
+    "\n",
+    "print(f\"{tmp*100:.1f}% of stars end up in a zone 1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_indices = []\n",
+    "for n in range(len(zone_idx)):\n",
+    "    all_indices.append(zone_idx[n])\n",
+    "tmp = np.unique(np.ravel(all_indices)).shape[0] / parent_projected_X.shape[0]\n",
+    "\n",
+    "print(f\"{tmp*100:.1f}% of stars end up in a zone 2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(parent), parent_projected_X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = cache_path / 'good_parent_neighborhood_indices.npy'\n",
+    "np.save(filename, np.array(all_indices))"
    ]
   },
   {
