notebooks pre-update

--- a/notebooks/2-Neighborhoods-PCA.ipynb
+++ b/notebooks/2-Neighborhoods-PCA.ipynb
@@ -74,9 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent_data = JoaquinData(\n",
-    "    parent, lowpass=False, \n",
-    "    cache_file='parent-sample-raw')"
+    "parent_data = JoaquinData.from_stars(\n",
+    "    parent, cache_file='parent-sample-raw')"
    ]
   },
   {
@@ -92,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec_good_mask = parent_data._spec_mask_vals < 0.25\n",
+    "spec_good_mask = parent_data.spec_bad_masks.sum(axis=0) < 0.25\n",
     "np.save(root_cache_path / 'spec_good_mask.npy', \n",
     "        spec_good_mask)\n",
     "spec_good_mask.sum()"
@@ -126,9 +125,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub_data = JoaquinData(\n",
-    "    sub_stars, lowpass=False, \n",
-    "    cache_file='neighborhood-node-sample')"
+    "sub_data = JoaquinData.from_stars(\n",
+    "    sub_stars, cache_file='neighborhood-node-sample')"
    ]
   },
   {
@@ -178,6 +176,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "color_labels = [f'{phot_to_label[x1]}-{phot_to_label[x2]}'\n",
+    "                        for x1, x2 in color_names]\n",
+    "sub_X = sub_data.get_neighborhood_X()\n",
+    "\n",
     "sub_X, color_labels, good_sub_stars = get_neighborhood_X(\n",
     "    sub_data, spec_good_mask)"
    ]
