also construct parent sample design matrix cache file

--- a/notebooks/1-Parent-sample.ipynb
+++ b/notebooks/1-Parent-sample.ipynb
@@ -56,7 +56,8 @@
     "from gala.mpl_style import hesperia, laguna\n",
     "\n",
     "from joaquin.config import all_phot_names, dr\n",
-    "from joaquin.plot import simple_corner, phot_to_label"
+    "from joaquin.plot import simple_corner, phot_to_label\n",
+    "from joaquin.data import JoaquinData"
    ]
   },
   {
@@ -385,6 +386,42 @@
    "outputs": [],
    "source": [
     "parent.write(cache_path / 'parent-sample.fits', overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Build the design matrix data for the full parent sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parent_data = JoaquinData.from_stars(\n",
+    "    parent, cache_file='parent-sample')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define and save a global spectral mask based on the fraction of pixels over the full parent sample that are masked:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "global_spec_mask = parent_data.spec_bad_masks.sum(axis=0) > 0.25\n",
+    "np.save(cache_path / 'global_spec_bad_mask.npy', \n",
+    "        global_spec_mask)\n",
+    "global_spec_mask.sum()"
    ]
   },
   {
