run through full process

--- a/notebooks/1-Parent-sample.ipynb
+++ b/notebooks/1-Parent-sample.ipynb
@@ -418,10 +418,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "global_spec_mask = parent_data.spec_bad_masks.sum(axis=0) > 0.25\n",
+    "global_spec_mask = (parent_data.spec_bad_masks.sum(axis=0) / len(parent_data.spec_bad_masks)) > 0.25\n",
     "np.save(cache_path / 'global_spec_bad_mask.npy', \n",
     "        global_spec_mask)\n",
-    "global_spec_mask.sum()"
+    "global_spec_mask.sum(), len(global_spec_mask)"
    ]
   },
   {
