--- a/notebooks/2-Neighborhoods-PCA.ipynb
+++ b/notebooks/2-Neighborhoods-PCA.ipynb
@@ -32,10 +32,9 @@
     "from sklearn.neighbors import KernelDensity\n",
     "\n",
     "from joaquin.data import JoaquinData\n",
-    "from joaquin.config import (all_phot_names, dr, root_cache_path, \n",
-    "                            neighborhood_size, testing_zone_size)\n",
-    "from joaquin.plot import simple_corner, phot_to_label, plot_hr_cmd\n",
-    "from joaquin.neighborhoods import get_neighborhood_X"
+    "from joaquin.config import (all_phot_names, dr, root_cache_path, neighborhood_n_components,\n",
+    "                            neighborhood_size, testing_zone_size, neighborhood_color_names)\n",
+    "from joaquin.plot import simple_corner, phot_to_label, plot_hr_cmd"
    ]
   },
   {
@@ -53,48 +52,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Build the design matrix data for the full parent sample"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent = at.Table.read(root_cache_path / 'parent-sample.fits')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parent_data = JoaquinData.from_stars(\n",
-    "    parent, cache_file='parent-sample-raw')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Define and save a global spectral mask based on the fraction of pixels over the full parent sample that are masked:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spec_good_mask = parent_data.spec_bad_masks.sum(axis=0) < 0.25\n",
-    "np.save(root_cache_path / 'spec_good_mask.npy', \n",
-    "        spec_good_mask)\n",
-    "spec_good_mask.sum()"
+    "parent_data = JoaquinData.read('parent-sample')\n",
+    "parent_data = parent_data[np.all(np.isfinite(parent_data.X), axis=1)]\n",
+    "\n",
+    "parent = parent_data.stars\n",
+    "global_spec_mask = np.load(cache_path / 'global_spec_bad_mask.npy')"
    ]
   },
   {
@@ -140,9 +107,10 @@
     "teff_logg_bins = (\n",
     "    np.linspace(3000, 9000, 128),\n",
     "    np.linspace(-0.5, 5.75, 128))\n",
-    "ax.hist2d(parent_data.stars['TEFF'], \n",
-    "          parent_data.stars['LOGG'],\n",
-    "          bins=bins, norm=mpl.colors.LogNorm(),\n",
+    "ax.hist2d(parent['TEFF'], \n",
+    "          parent['LOGG'],\n",
+    "          bins=teff_logg_bins, \n",
+    "          norm=mpl.colors.LogNorm(),\n",
     "          cmap='Greys')\n",
     "\n",
     "ax.plot(sub_data.stars['TEFF'],\n",
@@ -176,12 +144,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sub_data.all_phot_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "color_labels = [f'{phot_to_label[x1]}-{phot_to_label[x2]}'\n",
-    "                        for x1, x2 in color_names]\n",
-    "sub_X = sub_data.get_neighborhood_X()\n",
-    "\n",
-    "sub_X, color_labels, good_sub_stars = get_neighborhood_X(\n",
-    "    sub_data, spec_good_mask)"
+    "                for x1, x2 in neighborhood_color_names]\n",
+    "sub_X = sub_data.mask_spec_pixels(global_spec_mask).get_neighborhood_X()"
    ]
   },
   {
@@ -194,7 +168,7 @@
     "fig = simple_corner(\n",
     "    tmp, \n",
     "    labels=color_labels, \n",
-    "    color_by=good_sub_stars['LOGG'], vmin=0.5, vmax=5.5, \n",
+    "    color_by=sub_data.stars['LOGG'], vmin=0.5, vmax=5.5, \n",
     "    colorbar=True)"
    ]
   },
@@ -211,7 +185,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pca = IncrementalPCA(n_components=8, batch_size=1024)\n",
+    "pca = IncrementalPCA(n_components=neighborhood_n_components, \n",
+    "                     batch_size=1024)\n",
     "projected_X = pca.fit_transform(sub_X)\n",
     "projected_X /= pca.singular_values_"
    ]
@@ -234,9 +209,10 @@
     "bad_mask = np.any(np.abs(projected_X - mean) > 5*std, axis=1)\n",
     "\n",
     "neighborhood_node_X = sub_X[~bad_mask]\n",
-    "neighborhood_node_stars = good_sub_stars[~bad_mask]\n",
+    "neighborhood_node_stars = sub_data.stars[~bad_mask]\n",
     "\n",
-    "pca = IncrementalPCA(n_components=8, batch_size=1024)\n",
+    "pca = IncrementalPCA(n_components=neighborhood_n_components, \n",
+    "                     batch_size=1024)\n",
     "node_projected_X = pca.fit_transform(neighborhood_node_X)\n",
     "node_projected_X /= pca.singular_values_"
    ]
@@ -443,7 +419,7 @@
     "neighbor_plot_path.mkdir(exist_ok=True)\n",
     "\n",
     "for n, hood in enumerate(tqdm(neighborhoods)):\n",
-    "    fig = plot_hr_cmd(parent_data, neighborhood_node_stars,\n",
+    "    fig = plot_hr_cmd(parent, neighborhood_node_stars,\n",
     "                      idx0=hood[0], other_idx=hood[1:])\n",
     "    fig.tight_layout()\n",
     "    fig.savefig(neighbor_plot_path / f'neighborhood-{n:03d}.png', dpi=200)\n",
@@ -463,8 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parent_X, _, parent_good_stars = get_neighborhood_X(\n",
-    "    parent_data, spec_good_mask)\n",
+    "parent_X = parent_data.mask_spec_pixels(global_spec_mask).get_neighborhood_X()\n",
     "parent_X.shape"
    ]
   },
@@ -515,7 +490,7 @@
    "outputs": [],
    "source": [
     "for n in trange(len(zone_idx)):\n",
-    "    fig = plot_hr_cmd(parent_data, parent_good_stars,\n",
+    "    fig = plot_hr_cmd(parent_data.stars, parent_data.stars,\n",
     "                      idx0=zone_idx[n][0], other_idx=zone_idx[n][1:])\n",
     "    \n",
     "    fig.tight_layout()\n",
