link to rix paper

--- a/paper/joaquin-dr17.tex
+++ b/paper/joaquin-dr17.tex
@@ -7,6 +7,9 @@
 % - outline intro
 % - write method
 
+% Relevant literature
+% - https://ui.adsabs.harvard.edu/abs/2021ApJS..253...22X/abstract
+
 \documentclass[modern]{aastex631}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath, amsfonts}
@@ -199,7 +202,7 @@ We need consistent terminology.
 
 \section{Data patching, filtering, and munging}
 
-How do we find 
+How do we find
 
 Full contents of the rectangular feature matrix $X$.
 
